--- a/02_MiniProject_jrtp-1/src/main/resources/application.properties
+++ b/02_MiniProject_jrtp-1/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host: smtp.gmail.com
 spring.mail.port: 587
-spring.mail.username: somofficial2001@gmail.com
-spring.mail.password: ctfsabrnleyccwaa
+spring.mail.username: somofficial000@gmail.com
+spring.mail.password: ctfpbonrenccxxa
 spring.mail.properties.mail.smtp.auth: true
 spring.mail.properties.mail.smtp.starttls.enable: true
 
